// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be structurally sound when active 1`] = `
<vm-pip-control class="hidden">
  <vm-control hidden="" keys="p" label="Picture-in-Picture" pressed="">
    <vm-icon href="#vime-exit-pip"></vm-icon>
    <vm-tooltip position="top">
      Expand (p)
    </vm-tooltip>
  </vm-control>
</vm-pip-control>
`;

exports[`should be structurally sound when not active 1`] = `
<vm-pip-control class="hidden">
  <vm-control hidden="" keys="p" label="Picture-in-Picture">
    <vm-icon href="#vime-enter-pip"></vm-icon>
    <vm-tooltip position="top">
      Miniplayer (p)
    </vm-tooltip>
  </vm-control>
</vm-pip-control>
`;
